--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,9 +3,12 @@
 <head> 
     <title>Getting Started: Serving Web Content</title> 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet" type="text/css" href=" ./css/styles.css">
+    <script src="./js/script.js"></script>
 </head>
 <body>
+  <div th:replace="div :: nav"></div>
+  <h1>Mitch's Spring Boot Web Application!</h1>
     <p>Get your greeting <a href="/greeting">here</a></p>
-    <p>Visit Home <a href="/home">here</a></p>
 </body>
 </html>
